fix: Fill height so that it works in Firefox, Safari, Chrome and on iOS

--- a/assets/sass/app/_body-element.sass
+++ b/assets/sass/app/_body-element.sass
@@ -1,3 +1,6 @@
+html, body, #__nuxt, #__layout
+  height: 100%
+
 html
   overflow: auto
 
